[metadata]
name = geopandas
description = Geographic pandas extensions
long_description =
    GeoPandas is a project to add support for geographic data to
    `pandas`_ objects.

    The goal of GeoPandas is to make working with geospatial data in
    python easier. It combines the capabilities of `pandas`_ and `shapely`_,
    providing geospatial operations in pandas and a high-level interface
    to multiple geometries to shapely. GeoPandas enables you to easily do
    operations in python that would otherwise require a spatial database
    such as PostGIS.

    .. _pandas: http://pandas.pydata.org
    .. _shapely: http://shapely.readthedocs.io/en/latest/
long_description_content_type = text/x-rst
author = GeoPandas contributors
author_email = kjordahl@alum.mit.edu
url = http://geopandas.org
project_urls =
    Source = https://github.com/geopandas/geopandas
license = BSD
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas >= 1.0.0
    shapely >= 1.7
    fiona >= 1.8
    pyproj >= 2.6.1.post1
    packaging

[options.packages.find]
exclude = benchmarks

[options.package_data]
geopandas =
    datasets/nybb_16a.zip
    datasets/naturalearth_cities/*
    datasets/naturalearth_lowres/*
    tests/data/*

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = geopandas/_version.py
versionfile_build = geopandas/_version.py
tag_prefix = v
parentdir_prefix = geopandas-

[tool:pytest]
markers =
    web: tests that need network connectivity
xfail_strict = True

[flake8]
# Black enforces 88 characters line length
max_line_length = 88

ignore =
    E203,  # Space before : (needed for black formatting of slices)
    W503,  # Line break before binary operator (needed for black)
    F821   # TODO: fix F821 issues (see GH #1120) and remove this line
